--- a/lang/es.json
+++ b/lang/es.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.6.4",
-        "updated": "2025-12-24 20:15:42"
+        "version": "1.6.8",
+        "updated": "2025-12-28 20:31:58"
     },
     "txwelcome": "Bienvenido",
     "quotes": [
@@ -47,11 +47,18 @@
         "O",
         "N"
     ],
-    "txgps_label": "[DF]GPS (lat, lon) o nombre del lugar",
-    "txgpsauto": "Ubicación automática",
+    "tx_acc": [
+        "% Idioma/Ubicación",
+        "% Reloj",
+        "% Apariencia",
+        "% Extras"
+    ],
+    "txgps_label": "GPS (lat, lon) o nombre del lugar",
+    "txgpsauto": "Auto-ubicar",
     "txgpsautosh": "AUTO",
     "txtimezone": "Zona horaria",
     "txtimeformat": "Formato 24h",
+    "txshowclock": "Mostrar la hora",
     "txwelcomescr": "Nota GPS desactivado",
     "txshowagni": "Mostrar Agnihotra",
     "txagnihotrain": "Agnihotra en: {agnih_countdo}",
@@ -92,7 +99,8 @@
         "a-gord": "Arte"
     },
     "txstatuslog": "[b]-- Registro de estado:[/b]",
-    "txgpsbutton": "1x ubicación",
+    "txgpslabel": "1× ubicar",
+    "txgpsbutton": "Ubicar ahora",
     "txpopuphead": {
         "updateavail": "Actualización disponible",
         "notice": "Aviso"
@@ -108,15 +116,17 @@
         "txgpsdeact": "GPS está desactivado. Active GPS en la configuración de su dispositivo"
     },
     "txsettings": "[DF]Reloj de sol Gordon",
+    "txgordonssunclock": "Reloj de sol Gordon",
+    "txsunclock": "Reloj de sol",
     "txpartsupport": "[i]NOTA: (β) Este idioma solo es compatible parcialmente. Por lo tanto, algunas secciones están en inglés. Se agradece cualquier ayuda (Github). - En la última página encontrará un botón «Traducción automática».[/i]",
     "txnosupport": "[i]NOTA: Su idioma aún no ha sido traducido. En la última página encontrará un botón «Traducción automática»[/i]",
     "uebanleitung": "Instrucciones",
-    "txanleitung": "[DF]{LANGSUPPORT}Marque la casilla {txgpsauto} para actualizar automáticamente su ubicación durante el uso ({txagnihotra} para una localización más precisa y sincronización horaria por GPS). {txgpsbutton} determina su posición actual una sola vez y la guarda. [~LF][~LF]Alternativamente, puede introducir un nombre de lugar o una dirección en el campo de texto (si su dispositivo lo admite) o coordenadas (por ejemplo, 50.94, 6.96). Las entradas 3 y 4 son opcionales: la altitud aproximada [m] y la temperatura aproximada al atardecer [°C]. A continuación, marque la casilla {txwelcomescr}. Si se modifican los datos básicos, Sonnenuhr realiza un cálculo diario que, dependiendo del dispositivo, puede durar entre 2[NDASH]30 segundos. [~LF][~LF]{txagnihotra} muestra marcas para el indicador solar, así como la hora del próximo paso por cero del sol y la cuenta atrás. Seis minutos antes del Agnihotra, la pantalla se amplía y se muestran los segundos (⁺ = GPS actual).j",
-    "txmore": "[DF]{txfullscr} evita que se apague la pantalla: por ejemplo, le he colgado a mi sobrina una vieja [i]tableta[/i] con «reloj de sol» en la pared. Con {txuhrsinn} se puede determinar si el reloj gira en el sentido de las agujas del reloj (sur) o en sentido contrario. Si cambia el sentido de giro, la parte del círculo solar que se encuentra por debajo del horizonte quedará delante de usted (para más detalles, véase la página siguiente). [~LF][~LF]{txfarben} selecciona diferentes esferas. {txnachtmodus} {txlangarr|auto-} cambia al atardecer, -6° al final del crepúsculo, +6° antes. - Si sus ajustes no se aplican, pulse el botón de actualización en la parte inferior derecha de la esfera. [~LF][~LF]Puede ampliar la esfera con dos dedos (o con un triple toque). Si desea mover la imagen ampliada, hágalo lentamente. Los movimientos rápidos le llevarán a la página siguiente. - En la página siguiente encontrará una explicación de la esfera, y en la anterior, una leyenda.[DF][DF][DF]",
+    "txanleitung": "[DF]{LANGSUPPORT}1. Marque {txgpsauto} para actualizar automáticamente su ubicación durante el uso ({quotes|0-}{tx_acc|3-}/{txagnihotra-}{quotes|1-} para una determinación del lugar más precisa y sincronización horaria por GPS). {txgpsbutton} determina su posición actual una sola vez y la guarda de forma fija.[~LF][~LF]Como alternativa, puede introducir un nombre de lugar o una dirección en el campo de texto (si su dispositivo lo admite) o coordenadas (p. ej. 50.94, 6.96). Una 3. y 4. entrada son opcionales: la altura aproximada [m], la temperatura aproximada al crepúsculo [°C]. A continuación, marque {txwelcomescr}. - Si cambia datos básicos, {txsunclock-} realiza un cálculo diario que, según el dispositivo, puede tardar entre 2[NDASH]30 segundos.[~LF][~LF]2. Con {txuhrsinn} define si el reloj gira en el sentido de las agujas del reloj (sur) o al contrario. Si cambia el sentido de giro, la parte del círculo solar que queda bajo el horizonte estará delante de usted (detalles: ver la página siguiente). {txshowclock} muestra un reloj digital en la parte superior derecha de la esfera.",
+    "txmore": "[DF]3. {txfarben} selecciona diferentes esferas. {txnachtmodus} {txlangarr|auto-} cambia al atardecer, -6° hasta el final del crepúsculo, +6° antes. [~LF][~LF]4. {txagnihotra} muestra marcas para el puntero solar, así como la hora del próximo cruce por cero del Sol & cuenta atrás. Seis minutos antes de Agnihotra se amplía la pantalla y se muestran los segundos (⁺ = GPS actual). {txfullscr} evita que la pantalla se apague: p. ej. para colgar un [i]tablet[/i] antiguo con {txsunclock} en la pared. - Si en algún momento no se aplican sus ajustes, toque el botón de actualización en la parte inferior derecha de la esfera.[~LF][~LF]Puede ampliar la esfera con dos dedos (o con triple toque). Si quiere desplazar la imagen ampliada, hágalo lentamente. Los movimientos rápidos pasan a la siguiente página. - En la página siguiente encontrará una explicación de la esfera.[DF][DF][DF][b]–– Leyenda de la esfera:[/b]",
     "txdata": "[DF]Datos",
     "txlocdata": "[DF]Los cálculos del Reloj de sol de Gordon para su ubicación específica deben coincidir con el almanaque astronómico con una precisión de 0,0005 segundos de arco³:[DF]",
     "txobjdata": "– Sol¹ –[~LF]Hora: {sun_clocktm}[~LF]Hora temporal: {sun_temptm}[~LF]Día de luz: {sun_daylight}{sun_lighttime}{sun_agnicountdown}{sun_agnihotra}[~LF]Solsticio: {sun_soli}[~LF]Equinoccio: {sun_equi}[~LF][~LF]– Luna² –[~LF]Luna nueva: {moon_new}[~LF]Luna llena: {moon_full}[~LF]Noche lunar: {moon_gordon}[~LF]Iluminada: {moon_illum}[~LF]Tamaño: {moon_sizep} (85-100)[~LF][~LF]– Brillo –[~LF]Venus: {venus_magp} (83-100)[~LF]Marte: {mars_magp} (52-100)[~LF]Júpiter: {jupiter_magp} (87-100)[~LF]Saturno: {saturn_magp} (77-100)[~LF]Mercurio: {merkur_magp} (0-100)[~LF][~LF]¹ Hora: GPS = sincronizada | Hora temporal: hora local desigual (0,0[NDASH]11,9) ‘ἡ’ del día o ‘ν’ de la noche. ‘φ’ vigilia nocturna con “minutos” desiguales (0φ00[NDASH]3φ59) | {lighttime-}: véase más abajo | Día de luz y Agnihotra: salida[NDASH]puesta de hoy [salida de mañana], ⁺ = GPS actual | ² Luna llena y nueva: momento (en/antes de días) | Noche lunar: véase más abajo | ³ La Luna mide aprox. 2000 segundos de arco[DF][DF]",
-    "txlegende0": "[b]–– Explicaciones:[/b][~LF][~LF]La estación de luz del año divide el año en ocho fases de aumento y disminución de la luz: 1. {solcal_lph|0-} (4.2–5.5), 2a. {solcal_lph|1-} (6.5–20.5), 2b. {solcal_lph|2-} (21.5–21.7), 2c. {solcal_lph|3-} (22.7–6.8), 3. {solcal_lph|4-} (7.8–6.11), 4a. {solcal_lph|5-} (7.11–21.11), 4b. {solcal_lph|6-} (22.11–19.1) y 4c. {solcal_lph|7-} (20.1–3.2). En breve: Φx·y con x = temporada de luz, y =[SP]% de progreso. – Las fechas se basan en puntos astronómicos y pueden desviarse ligeramente del calendario civil.[~LF][~LF]La fecha lunar funciona como nuestra fecha, pero con noches en lugar de días: Μx·y (p/z), donde x = “mes” lunar del año, y = noche del mes lunar. Como los meses lunares tienen distinta longitud, z indica el número total de noches del mes lunar y p la noche de luna llena. La noche termina al amanecer.[DF][DF][DF][b]–– Leyenda de la esfera:[/b]",
+    "txlegende0": "[b]–– Explicaciones:[/b][~LF][~LF]La estación de luz del año divide el año en ocho fases de aumento y disminución de la luz: 1. {solcal_lph|0-} (4.2–5.5), 2a. {solcal_lph|1-} (6.5–20.5), 2b. {solcal_lph|2-} (21.5–21.7), 2c. {solcal_lph|3-} (22.7–6.8), 3. {solcal_lph|4-} (7.8–6.11), 4a. {solcal_lph|5-} (7.11–21.11), 4b. {solcal_lph|6-} (22.11–19.1) y 4c. {solcal_lph|7-} (20.1–3.2). En breve: Φx·y con x = temporada de luz, y =[SP]% de progreso. – Las fechas se basan en puntos astronómicos y pueden desviarse ligeramente del calendario civil.[~LF][~LF]La fecha lunar funciona como nuestra fecha, pero con noches en lugar de días: Μx·y (p/z), donde x = “mes” lunar del año, y = noche del mes lunar. Como los meses lunares tienen distinta longitud, z indica el número total de noches del mes lunar y p la noche de luna llena. La noche termina al amanecer.[DF][DF][DF]",
     "buttonsolcal": "Calendario de luz",
     "txlegende": "[DF]☉ Sol, ● Luna (con fases)[~LF][~LF]♀ Venus (nacarada), ♂ Marte (rojizo), ♃ Júpiter (listado), ♄ Saturno (con anillos), ☿ Mercurio (gris)[~LF][~LF][s] Sirio, [k] Canopo, [f] Alfa Centauri, [a] Arturo, [w] Vega, [c] Capella, [r] Rigel, [p] Proción, [b] Betelgeuse, [h] Achernar[DF][DF][DF][DF]",
     "char_vowels": "aeiouyäöüáéíóúÄÖÜÁÉÍÓÚ",
