--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.6.4",
-        "updated": "2025-12-24 20:15:42"
+        "version": "1.6.8",
+        "updated": "2025-12-28 20:31:58"
     },
     "txwelcome": "Bienvenue",
     "quotes": [
@@ -48,11 +48,18 @@
         "O",
         "N"
     ],
-    "txgps_label": "[DF]GPS (lat, lon) ou nom de lieu",
-    "txgpsauto": "Position automatique",
+    "tx_acc": [
+        "% Langue/Position",
+        "% Horloge",
+        "% Apparence",
+        "% Extras"
+    ],
+    "txgps_label": "GPS (lat, lon) ou nom de lieu",
+    "txgpsauto": "Auto-localiser",
     "txgpsautosh": "AUTO",
     "txtimezone": "Fuseau horaire",
     "txtimeformat": "Format 24h",
+    "txshowclock": "Afficher l’heure",
     "txwelcomescr": "Masquer l’info GPS",
     "txshowagni": "Afficher Agnihotra",
     "txagnihotrain": "Agnihotra dans: {agnih_countdo}",
@@ -93,7 +100,8 @@
         "a-gord": "Art"
     },
     "txstatuslog": "[b]–– Journal d'état:[/b]",
-    "txgpsbutton": "1x position",
+    "txgpslabel": "1× localiser",
+    "txgpsbutton": "Localiser",
     "txpopuphead": {
         "updateavail": "Mise à jour disponible",
         "notice": "Avis"
@@ -109,15 +117,17 @@
         "txgpsdeact": "Le GPS est désactivé. Veuillez activer le GPS dans les paramètres de votre appareil"
     },
     "txsettings": "[DF]Horloge de Gordon",
+    "txgordonssunclock": "Horloge solaire de Gordon",
+    "txsunclock": "Horloge solaire",
     "txpartsupport": "[i]REMARQUE : (β) Cette langue n'est que partiellement prise en charge. Certaines sections sont donc en anglais. Toute aide est la bienvenue (Github). - Vous trouverez un bouton « Traduction automatique » sur la dernière page[/i]",
     "txnosupport": "[i]REMARQUE : votre langue n'est pas encore traduite. Vous trouverez un bouton « Traduction automatique » sur la dernière page[/i]",
     "uebanleitung": "Instructions",
-    "txanleitung": "[DF]{LANGSUPPORT}Cochez la case {txgpsauto} pour mettre à jour automatiquement votre position pendant l'utilisation ({txagnihotra} pour une localisation plus précise et une synchronisation GPS). {txgpsbutton} détermine votre position actuelle une seule fois et la conserve. [~LF][~LF]Vous pouvez également saisir un nom de lieu ou une adresse dans le champ de texte (si votre appareil le permet) ou des coordonnées (par exemple 50,94, 6,96). Les 3e et 4e entrées sont facultatives : l'altitude approximative [m], la température approximative au crépuscule [°C]. Cochez ensuite la case {txwelcomescr}. - En cas de modification des données de base, Sonnenuhr effectue un calcul quotidien qui peut prendre entre 2[NDASH]30 secondes selon l'appareil. [~LF][~LF]{txagnihotra} affiche les repères pour l'aiguille solaire ainsi que l'heure du prochain passage du soleil à zéro et le compte à rebours. Six minutes avant l'Agnihotra, l'affichage est agrandi et les secondes s'affichent (⁺ = GPS actuel).",
-    "txmore": "[DF]{txfullscr} empêche l'écran de s'éteindre : j'ai par exemple accroché au mur une vieille [i]tablette[/i] avec une « horloge solaire » pour ma nièce. Avec {txuhrsinn}, vous pouvez définir si l'horloge tourne dans le sens des aiguilles d'une montre (sud) ou dans le sens inverse. Si vous modifiez le sens de rotation, la partie du cercle solaire située sous l'horizon se trouve devant vous (pour plus de détails, voir page suivante). [~LF][~LF]{txfarben} permet de choisir différents cadrans. {txnachtmodus} {txlangarr|auto-} change au coucher du soleil, -6° à la fin du crépuscule, +6° avant. - Si vos réglages ne sont pas pris en compte, appuyez sur le bouton de mise à jour en bas à droite du cadran. [~LF][~LF]Vous pouvez zoomer sur le cadran avec deux doigts (ou en appuyant trois fois). Si vous souhaitez déplacer l'image zoomée, faites-le lentement. Les mouvements rapides vous font passer à la page suivante. - Vous trouverez une explication du cadran à la page suivante et une légende à la page précédente.[DF][DF][DF]",
+    "txanleitung": "[DF]{LANGSUPPORT}1. Cochez {txgpsauto} pour actualiser automatiquement votre position pendant l’utilisation ({quotes|0-}{tx_acc|3-}/{txagnihotra-}{quotes|1-} pour une localisation plus précise et la synchronisation de l’heure GPS). {txgpsbutton} détermine votre position actuelle une seule fois et l’enregistre de manière fixe.[~LF][~LF]Vous pouvez aussi saisir un nom de lieu ou une adresse dans le champ de texte (si votre appareil le prend en charge) ou des coordonnées (p. ex. 50.94, 6.96). Une 3e et une 4e entrée sont facultatives : l’altitude approximative [m], la température approximative au crépuscule [°C]. Cochez ensuite {txwelcomescr}. - En cas de modification de données de base, {txsunclock-} effectue un calcul journalier qui peut, selon l’appareil, durer entre 2[NDASH]30 secondes.[~LF][~LF]2. Avec {txuhrsinn}, vous définissez si l’horloge tourne dans le sens horaire (sud) ou dans l’autre sens. Si vous changez le sens de rotation, la partie du cercle solaire située sous l’horizon se trouve devant vous (détails : voir page suivante). {txshowclock} affiche une horloge numérique en haut à droite du cadran.",
+    "txmore": "[DF]3. {txfarben} sélectionne différents cadrans. {txnachtmodus} {txlangarr|auto-} bascule au coucher du soleil, -6° jusqu’à la fin du crépuscule, +6° avant. [~LF][~LF]4. {txagnihotra} affiche des repères pour l’aiguille solaire ainsi que l’heure du prochain passage à zéro du Soleil & compte à rebours. Six minutes avant Agnihotra, l’affichage est agrandi et les secondes sont affichées (⁺ = GPS actuel). {txfullscr} empêche l’extinction de l’écran : p. ex. pour accrocher une vieille [i]tablette[/i] avec {txsunclock} au mur. - Si vos réglages ne sont parfois pas pris en compte, touchez le bouton d’actualisation en bas à droite du cadran.[~LF][~LF]Vous pouvez zoomer sur le cadran avec deux doigts (ou par triple tap). Si vous voulez déplacer l’image zoomée, faites-le lentement. Les mouvements rapides font défiler vers la page suivante. - Sur la page suivante, vous trouverez une explication du cadran.[DF][DF][DF][b]–– Légende du cadran :[/b]",
     "txdata": "[DF]Données",
     "txlocdata": "[DF]Les calculs de l'Horloge solaire de Gordon pour votre emplacement individuel doivent correspondre à l'almanach astronomique à 0,0005 seconde d'arc près³:[DF]",
     "txobjdata": "– Soleil¹ –[~LF]Heure: {sun_clocktm}[~LF]Heure temporelle: {sun_temptm}[~LF]Jour de lumière: {sun_daylight}{sun_lighttime}{sun_agnicountdown}{sun_agnihotra}[~LF]Solstice: {sun_soli}[~LF]Équinoxe: {sun_equi}[~LF][~LF]– Lune² –[~LF]Nouvelle lune: {moon_new}[~LF]Pleine lune: {moon_full}[~LF]Nuit lunaire: {moon_gordon}[~LF]Éclairée: {moon_illum}[~LF]Taille: {moon_sizep} (85-100)[~LF][~LF]– Luminosité –[~LF]Vénus: {venus_magp} (83-100)[~LF]Mars: {mars_magp} (52-100)[~LF]Jupiter: {jupiter_magp} (87-100)[~LF]Saturne: {saturn_magp} (77-100)[~LF]Mercure: {merkur_magp} (0-100)[~LF][~LF]¹ Heure: GPS = synchronisée | Heure temporelle: heure locale inégale (0,0[NDASH]11,9), ‘ἡ’ pour le jour ou ‘ν’ pour la nuit. ‘φ’ veille nocturne avec « minutes » inégales (0φ00[NDASH]3φ59) | {lighttime-} : voir ci-dessous | Jour de lumière et Agnihotra: lever[NDASH]coucher aujourd’hui [lever demain], ⁺ = GPS actuel | ² Nouvelle et pleine lune: moment (en/avant jours) | Nuit lunaire: voir ci-dessous | ³ La Lune mesure env. 2000 secondes d’arc[DF][DF]",
-    "txlegende0": "[b]–– Explications :[/b][~LF][~LF]La saison lumineuse de l’année divise l’année en huit phases de lumière croissante et décroissante : 1. {solcal_lph|0-} (4.2–5.5), 2a. {solcal_lph|1-} (6.5–20.5), 2b. {solcal_lph|2-} (21.5–21.7), 2c. {solcal_lph|3-} (22.7–6.8), 3. {solcal_lph|4-} (7.8–6.11), 4a. {solcal_lph|5-} (7.11–21.11), 4b. {solcal_lph|6-} (22.11–19.1) et 4c. {solcal_lph|7-} (20.1–3.2). En bref : Φx·y avec x = temps de lumière, y =[SP]% d’avancement. – Les dates se basent sur des points astronomiques et peuvent s’écarter légèrement du calendrier civil.[~LF][~LF]La date lunaire fonctionne comme notre date, mais avec des nuits au lieu de jours : Μx·y (p/z), avec x = « mois » lunaire de l’année, y = nuit du mois lunaire. Comme les mois lunaires n’ont pas tous la même durée, z indique le nombre total de nuits du mois lunaire, et p la nuit de la pleine lune. La nuit se termine au lever du soleil.[DF][DF][DF][b]–– Légende du cadran :[/b]",
+    "txlegende0": "[b]–– Explications :[/b][~LF][~LF]La saison lumineuse de l’année divise l’année en huit phases de lumière croissante et décroissante : 1. {solcal_lph|0-} (4.2–5.5), 2a. {solcal_lph|1-} (6.5–20.5), 2b. {solcal_lph|2-} (21.5–21.7), 2c. {solcal_lph|3-} (22.7–6.8), 3. {solcal_lph|4-} (7.8–6.11), 4a. {solcal_lph|5-} (7.11–21.11), 4b. {solcal_lph|6-} (22.11–19.1) et 4c. {solcal_lph|7-} (20.1–3.2). En bref : Φx·y avec x = temps de lumière, y =[SP]% d’avancement. – Les dates se basent sur des points astronomiques et peuvent s’écarter légèrement du calendrier civil.[~LF][~LF]La date lunaire fonctionne comme notre date, mais avec des nuits au lieu de jours : Μx·y (p/z), avec x = « mois » lunaire de l’année, y = nuit du mois lunaire. Comme les mois lunaires n’ont pas tous la même durée, z indique le nombre total de nuits du mois lunaire, et p la nuit de la pleine lune. La nuit se termine au lever du soleil.[DF][DF][DF]",
     "buttonsolcal": "Calendrier lumineux",
     "txlegende": "[DF]☉ Soleil, ● Lune (avec phases)[~LF][~LF]♀ Vénus (nacrée), ♂ Mars (rougeâtre), ♃ Jupiter (bandée), ♄ Saturne (avec anneaux), ☿ Mercure (grise)[~LF][~LF][s] Sirius, [k] Canopus, [f] Alpha Centauri, [a] Arcturus, [w] Véga, [c] Capella, [r] Rigel, [p] Procyon, [b] Bételgeuse, [h] Achernar[DF][DF][DF][DF]",
     "char_vowels": "aeiouyäöüáéíóúÄÖÜÁÉÍÓÚ",
