--- a/lang/ru.json
+++ b/lang/ru.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.6.4",
-        "updated": "2025-12-24 20:15:42"
+        "version": "1.6.8",
+        "updated": "2025-12-28 20:31:58"
     },
     "txwelcome": "Добро пожаловать",
     "quotes": [
@@ -49,7 +49,13 @@
         "З",
         "С"
     ],
-    "txgps_label": "[DF]GPS (шир., долг.) или название места",
+    "tx_acc": [
+        "% Язык/Местоположение",
+        "% Часы",
+        "% Внешний вид",
+        "% Дополнительно"
+    ],
+    "txgps_label": "GPS (шир., долг.) или название места",
     "txgpsauto": "Авто-локация",
     "txgpsautosh": "АВТО",
     "txtimezone": "Часовой пояс",
@@ -94,7 +100,9 @@
         "a-gord": "Искусство"
     },
     "txstatuslog": "[b]–– Журнал статуса:[/b]",
-    "txgpsbutton": "1× Определение",
+    "txgpslabel": "1× локация",
+    "txgpsbutton": "Найти сейчас",
+    "txshowclock": "Показывать время",
     "txpopuphead": {
         "updateavail": "Доступно обновление",
         "notice": "Уведомление"
@@ -110,15 +118,17 @@
         "txgpsdeact": "GPS отключён. Пожалуйста, включите GPS в настройках устройства"
     },
     "txsettings": "[DF]Часы Гордона",
+    "txgordonssunclock": "Часы Гордона",
+    "txsunclock": "Солнечные часы",
     "txpartsupport": "[i]ПРИМЕЧАНИЕ: (β) Этот язык поддерживается частично. Поэтому некоторые разделы на английском. Помощь приветствуется (GitHub). — На последней странице есть кнопка «Автоперевод»[/i]",
     "txnosupport": "[i]ПРИМЕЧАНИЕ: Ваш язык пока не поддерживается, поэтому отображается английский. На последней странице есть кнопка «Автоперевод»[/i]",
     "uebanleitung": "Инструкция",
-    "txanleitung": "[DF]{LANGSUPPORT}Установите флажок {txgpsauto}, чтобы автоматически обновлять свое местоположение во время использования ({txagnihotra} для более точного определения местоположения и синхронизации времени GPS). {txgpsbutton} определяет ваше текущее местоположение один раз и фиксирует его. [~LF][~LF]В качестве альтернативы вы можете ввести название места или адрес в текстовое поле (если ваше устройство поддерживает эту функцию) или координаты (например, 50.94, 6.96). Третья и четвертая записи являются опциональными: приблизительная высота [м], приблизительная температура на закате [°C]. Затем поставьте галочку напротив {txwelcomescr}. При изменении основных данных солнечные часы выполняют дневной расчет, который в зависимости от устройства может занимать от 2[NDASH]30 секунд. [~LF][~LF]{txagnihotra} показывает метки для солнечного стрелки, а также время следующего прохождения солнца через нулевую точку и обратный отсчет. За шесть минут до Агнихотры отображение увеличивается и появляются секунды (⁺ = текущее GPS).",
-    "txmore": "[DF]{txfullscr} предотвращает выключение экрана: например, я повесил старый [i]планшет[/i] с «Солнечными часами» на стену для племянницы. С помощью {txuhrsinn} вы задаёте, движется ли стрелка по часовой (юг) или против. При смене направления часть солнечного круга под горизонтом оказывается перед вами (подробности на следующей странице).[~LF][~LF]{txfarben} выбирает разные циферблаты. {txnachtmodus} {txlangarr|auto-} переключается на закате, -6° — к концу сумерек, +6° — до них. — Если настройки не применяются, нажмите кнопку обновления в правом нижнем углу циферблата.[~LF][~LF]В циферблат можно зумить двумя пальцами (или тройным тапом). Чтобы сдвинуть увеличенное изображение, делайте это медленно. Быстрые движения перелистывают страницу. — На следующей странице вы найдете объяснение циферблата, а на предыдущей — легенду.[DF][DF][DF]",
+    "txanleitung": "[DF]{LANGSUPPORT}1. Поставьте галочку {txgpsauto}, чтобы автоматически обновлять ваше местоположение во время использования ({quotes|0-}{tx_acc|3-}/{txagnihotra-}{quotes|1-} для более точного определения места и синхронизации времени по GPS). {txgpsbutton} определяет вашу текущую позицию однократно и сохраняет её фиксированно.[~LF][~LF]В качестве альтернативы можно ввести название места или адрес в текстовое поле (если устройство это поддерживает) либо координаты (например, 50.94, 6.96). 3-й и 4-й вводы необязательны: приблизительная высота [м], приблизительная температура в сумерках [°C]. Затем поставьте галочку {txwelcomescr}. - При изменении базовых данных {txsunclock-} выполняет суточный расчёт, который в зависимости от устройства может занять 2[NDASH]30 секунд.[~LF][~LF]2. С помощью {txuhrsinn} вы задаёте, будет ли часы идти по часовой стрелке (юг) или против. Если изменить направление вращения, часть солнечного круга, находящаяся ниже горизонта, окажется перед вами (подробнее: см. следующую страницу). {txshowclock} отображает цифровые часы в правом верхнем углу циферблата.",
+    "txmore": "[DF]3. {txfarben} выбирает разные циферблаты. {txnachtmodus} {txlangarr|auto-} переключается на закате, -6° до конца сумерек, +6° до этого. [~LF][~LF]4. {txagnihotra} показывает метки для солнечной стрелки, а также время следующего нулевого прохода Солнца & обратный отсчёт. За шесть минут до Agnihotra отображение увеличивается и показываются секунды (⁺ = GPS актуален). {txfullscr} предотвращает отключение экрана: напр. чтобы повесить на стену старый [i]планшет[/i] с {txsunclock}. - Если ваши настройки иногда не применяются, нажмите кнопку обновления на циферблате внизу справа.[~LF][~LF]Циферблат можно приблизить двумя пальцами (или тройным тапом). Если хотите переместить увеличенное изображение, делайте это медленно. Быстрые движения листают на следующую страницу. - На следующей странице вы найдёте объяснение циферблата.[DF][DF][DF][b]–– Легенда циферблата:[/b]",
     "txdata": "[DF]Данные",
     "txlocdata": "[DF]Расчёты «Солнечных часов Гордона» для вашего местоположения должны совпадать с астрономическим альманахом с точностью до 0,0005 угловых секунд³:[DF]",
     "txobjdata": "– Солнце¹ –[~LF]Время: {sun_clocktm}[~LF]Темпоральный час: {sun_temptm}[~LF]Световой день: {sun_daylight}{sun_lighttime}{sun_agnicountdown}{sun_agnihotra}[~LF]Солнцестояние: {sun_soli}[~LF]Равноденствие: {sun_equi}[~LF][~LF]– Луна² –[~LF]Новолуние: {moon_new}[~LF]Полнолуние: {moon_full}[~LF]Лунная ночь: {moon_gordon}[~LF]Освещённость: {moon_illum}[~LF]Размер: {moon_sizep} (85-100)[~LF][~LF]– Яркость –[~LF]Венера: {venus_magp} (83-100)[~LF]Марс: {mars_magp} (52-100)[~LF]Юпитер: {jupiter_magp} (87-100)[~LF]Сатурн: {saturn_magp} (77-100)[~LF]Меркурий: {merkur_magp} (0-100)[~LF][~LF]¹ Время: GPS = синхронизировано | Темпоральный час: местный неравный час (0,0[NDASH]11,9), ‘ἡ’ для дня и ‘ν’ для ночи. ‘φ’ ночная стража с неравными «минутами» (0φ00[NDASH]3φ59) | {lighttime-}: см. ниже | Световой день и Агнихотра: восход[NDASH]закат сегодня [восход завтра], ⁺ = текущий GPS | ² Полная и новая Луна: момент (через/до скольких дней) | Лунная ночь: см. ниже | ³ Диаметр Луны ≈ 2000 угловых секунд[DF][DF]",
-    "txlegende0": "[b]–– Пояснения:[/b][~LF][~LF]Световой сезон года делит год на восемь фаз нарастающего и убывающего света: 1. {solcal_lph|0-} (4.2–5.5), 2a. {solcal_lph|1-} (6.5–20.5), 2b. {solcal_lph|2-} (21.5–21.7), 2c. {solcal_lph|3-} (22.7–6.8), 3. {solcal_lph|4-} (7.8–6.11), 4a. {solcal_lph|5-} (7.11–21.11), 4b. {solcal_lph|6-} (22.11–19.1) и 4c. {solcal_lph|7-} (20.1–3.2). Кратко: Φx·y, где x = световое время, y =[SP]% прогресса. – Даты опираются на астрономические точки и могут немного отличаться от гражданского календаря.[~LF][~LF]Лунная дата работает как наша календарная дата, но с ночами вместо дней: Μx·y (p/z), где x = «лунный месяц» года, y = ночь в этом лунном месяце. Так как длительность лунных месяцев различна, z даёт общее число ночей в лунном месяце, а p – ночь полнолуния. Ночь заканчивается на восходе солнца.[DF][DF][DF][b]–– Условные обозначения циферблата:[/b]",
+    "txlegende0": "[b]–– Пояснения:[/b][~LF][~LF]Световой сезон года делит год на восемь фаз нарастающего и убывающего света: 1. {solcal_lph|0-} (4.2–5.5), 2a. {solcal_lph|1-} (6.5–20.5), 2b. {solcal_lph|2-} (21.5–21.7), 2c. {solcal_lph|3-} (22.7–6.8), 3. {solcal_lph|4-} (7.8–6.11), 4a. {solcal_lph|5-} (7.11–21.11), 4b. {solcal_lph|6-} (22.11–19.1) и 4c. {solcal_lph|7-} (20.1–3.2). Кратко: Φx·y, где x = световое время, y =[SP]% прогресса. – Даты опираются на астрономические точки и могут немного отличаться от гражданского календаря.[~LF][~LF]Лунная дата работает как наша календарная дата, но с ночами вместо дней: Μx·y (p/z), где x = «лунный месяц» года, y = ночь в этом лунном месяце. Так как длительность лунных месяцев различна, z даёт общее число ночей в лунном месяце, а p – ночь полнолуния. Ночь заканчивается на восходе солнца.[DF][DF][DF]",
     "buttonsolcal": "Световой календарь",
     "txlegende": "[DF]☉ Солнце, ● Луна (с фазами)[~LF][~LF]♀ Венера (перламутровая), ♂ Марс (красноватый), ♃ Юпитер (полосатый), ♄ Сатурн (с кольцами), ☿ Меркурий (серый)[~LF][~LF][s] Сириус, [k] Канопус, [f] Альфа Центавра, [a] Арктур, [w] Вега, [c] Капелла, [r] Ригель, [p] Процион, [b] Бетельгейзе, [h] Ахернар[DF][DF][DF][DF]",
     "char_vowels": "аеёиоуыэюяАЕЁИОУЫЭЮЯ",
