--- a/lang/zh.json
+++ b/lang/zh.json
@@ -1,12 +1,12 @@
 {
     "_meta": {
-        "version": "1.6.4",
-        "updated": "2025-12-24 20:15:42"
+        "version": "1.6.8",
+        "updated": "2025-12-28 20:31:58"
     },
     "txwelcome": "欢迎",
     "quotes": [
         "“",
-        "”y"
+        "”"
     ],
     "oclocksh": "",
     "hoursh": "小时",
@@ -60,11 +60,18 @@
         "西",
         "北"
     ],
-    "txgps_label": "[DF]GPS（纬度、经度）或地点名称",
+    "tx_acc": [
+        "% 语言/位置",
+        "% 时钟",
+        "% 外观",
+        "% 附加功能"
+    ],
+    "txgps_label": "GPS（纬度、经度）或地点名称",
     "txgpsauto": "自动定位",
     "txgpsautosh": "自动",
     "txtimezone": "时区",
     "txtimeformat": "24小时制",
+    "txshowclock": "显示时间",
     "txwelcomescr": "关闭GPS提示",
     "txshowagni": "阿格尼霍特拉时间",
     "txagnihotrain": "阿格尼火供进行中：{agnih_countdo}",
@@ -105,7 +112,8 @@
         "a-gord": "艺术"
     },
     "txstatuslog": "[b]–– 状态日志:[/b]",
-    "txgpsbutton": "1次定位",
+    "txgpslabel": "定位1次",
+    "txgpsbutton": "立即定位",
     "txpopuphead": {
         "updateavail": "更新可用",
         "notice": "注意"
@@ -121,15 +129,17 @@
         "txgpsdeact": "GPS已禁用。请在设备设置中启用GPS"
     },
     "txsettings": "[DF]Gordon-太阳时钟",
+    "txgordonssunclock": "Gordon-太阳时钟",
+    "txsunclock": "太阳时钟",
     "txpartsupport": "[i]注意：(β) 此语言仅提供部分支持。因此，部分内容为英文。欢迎提供支持（Github）。- 在最后一页，您会看到一个“自动翻译”按钮[/i]",
     "txnosupport": "[i]注意：您的语言尚未翻译。在最后一页，您会看到一个“自动翻译”按钮[/i]",
     "uebanleitung": "说明",
-    "txanleitung": "[DF]{LANGSUPPORT}勾选 {txgpsauto} 以在使用过程中自动更新您的位置（勾选 {txagnihotra} 以获得更精确的位置和 GPS 时间同步）。{txgpsbutton} 会一次性确定您当前的位置并将其固定下来。[~LF][~LF]或者，您也可以在文本框中输入地点名称或地址（如果您的设备支持此功能），或输入坐标（例如 50.94, 6.96）。第三和第四项是可选的：大致海拔高度 [m]、黄昏时分的大致温度 [°C]。然后，在 {txwelcomescr} 处打勾。 - 如果基本数据发生变化，日晷会进行每日计算，根据设备的不同，计算时间可能需要 2[NDASH]30 秒。[~LF][~LF]{txagnihotra} 显示太阳指针的标记以及太阳下一次零点通过的时间和倒计时。在阿格尼霍特拉仪式开始前六分钟，显示屏会放大并显示秒数（⁺ = 当前 GPS）。",
-    "txmore": "[DF]{txfullscr} 可防止屏幕关闭：例如，我给侄女挂了一块旧的 [i]平板电脑[/i]，上面装有“日晷”。使用 {txuhrsinn}，您可以设置时钟是顺时针（南）还是逆时针运行。如果更改旋转方向，太阳圈低于地平线的部分就会出现在您面前（详情见下一页）。[~LF][~LF]{txfarben} 可选择不同的表盘。{txnachtmodus} {txlangarr|auto-} 在日落时切换，-6° 为黄昏结束时，+6° 为黄昏开始时。- 如果您的设置未被采用，请点击表盘右下角的更新按钮。[~LF][~LF]您可以使用两根手指（或三连击）放大表盘。如果您想移动放大的图像，请缓慢操作。快速移动会切换到下一页。- 在下一页，您会看到表盘的说明，在上一页，您会看到图例。[DF][DF][DF]",
+    "txanleitung": "[DF]{LANGSUPPORT}1. 勾选 {txgpsauto}，以便在使用期间自动更新您的位置（{quotes|0-}{tx_acc|3-}/{txagnihotra-}{quotes|1-} 用于更精确的定位与 GPS 时间同步）。{txgpsbutton} 会单次确定您当前的位置并固定采用。[~LF][~LF]或者，您也可以在文本框中输入地名或地址（如果您的设备支持），或输入坐标（例如 50.94, 6.96）。第 3 和第 4 项为可选：大致海拔 [m]、黄昏时的大致温度 [°C]。随后勾选 {txwelcomescr}。- 当基本数据发生变化时，{txsunclock-} 会进行一次日计算；根据设备不同，可能需要 2[NDASH]30 秒。[~LF][~LF]2. 通过 {txuhrsinn} 设置时钟是顺时针运行（南）还是逆时针运行。若更改旋转方向，位于地平线以下的太阳圆部分会呈现在您面前（详情见下一页）。{txshowclock} 会在表盘右上角显示数字时钟。",
+    "txmore": "[DF]3. {txfarben} 选择不同的表盘。{txnachtmodus} {txlangarr|auto-} 在日落时切换，-6° 为暮光结束，+6° 在此之前。 [~LF][~LF]4. {txagnihotra} 显示太阳指针的标记，以及太阳下一次过零点的时间 & 倒计时。Agnihotra 前 6 分钟会放大显示并显示秒数（⁺ = GPS 最新）。{txfullscr} 防止屏幕熄灭：例如把带有 {txsunclock} 的旧 [i]平板[/i] 挂在墙上。- 如果某次设置未被应用，请点击表盘右下角的刷新按钮。[~LF][~LF]您可以用两指在表盘上缩放（或三击）。如需移动放大的图像，请缓慢操作。快速移动会切换到下一页。- 下一页提供表盘说明。[DF][DF][DF][b]–– 表盘图例：[/b]",
     "txdata": "[DF]数据",
     "txlocdata": "[DF]根据Gordon-太阳时钟对您所在位置的计算结果应与天文年历上的数据一致，误差不超过 0.0005 角秒³：[DF]",
     "txobjdata": "– 太阳¹ –[~LF]时间: {sun_clocktm}[~LF]时段: {sun_temptm}[~LF]光日: {sun_daylight}{sun_lighttime}{sun_agnicountdown}{sun_agnihotra}[~LF]至日: {sun_soli}[~LF]昼夜平分点: {sun_equi}[~LF][~LF]– 月亮² –[~LF]新月: {moon_new}[~LF]满月: {moon_full}[~LF]月夜: {moon_gordon}[~LF]被照亮: {moon_illum}[~LF]视直径: {moon_sizep} (85-100)[~LF][~LF]– 亮度 –[~LF]金星: {venus_magp} (83-100)[~LF]火星: {mars_magp} (52-100)[~LF]木星: {jupiter_magp} (87-100)[~LF]土星: {saturn_magp} (77-100)[~LF]水星: {merkur_magp} (0-100)[~LF][~LF]¹ 时间: GPS = 已同步 | 时段: 本地不等时 (0.0[NDASH]11.9)，白昼用 ‘ἡ’，黑夜用 ‘ν’ 表示。‘φ’ 为夜间守望，不等“分钟” (0φ00[NDASH]3φ59) | {lighttime-}: 见下文 | 光日与 Agnihotra: 今日日出[NDASH]日落 [明日日出]，⁺ = 当前 GPS | ² 新月与满月: 时刻（还有/之前多少天） | 月夜: 见下文 | ³ 月面视直径约为 2000 角秒[DF][DF]",
-    "txlegende0": "[b]–– 说明：[/b][~LF][~LF]一年中的“光之季节”把一年分成八个光线渐强、渐弱的阶段：1. {solcal_lph|0-}（4.2–5.5），2a. {solcal_lph|1-} (6.5–20.5)，2b. {solcal_lph|2-} (21.5–21.7)，2c. {solcal_lph|3-} (22.7–6.8)，3. {solcal_lph|4-} (7.8–6.11)，4a. {solcal_lph|5-} (7.11–21.11)，4b. {solcal_lph|6-} (22.11–19.1)，4c. {solcal_lph|7-} (20.1–3.2)。简写：Φx·y，其中 x = 光之时，y =[SP]% 进度。– 这些日期基于天文节点，因此可能与常规日历略有出入。[~LF][~LF]“月日”与我们的日期类似，只是以“夜”代替“日”：Μx·y (p/z)，其中 x = 该年的“月月”，y = 该月中的第几夜。由于各个朔望月长短不同，z 表示该月的夜数总和，p 表示满月之夜。夜晚在日出时结束。[DF][DF][DF][b]–– 表盘图例:[/b]",
+    "txlegende0": "[b]–– 说明：[/b][~LF][~LF]一年中的“光之季节”把一年分成八个光线渐强、渐弱的阶段：1. {solcal_lph|0-}（4.2–5.5），2a. {solcal_lph|1-} (6.5–20.5)，2b. {solcal_lph|2-} (21.5–21.7)，2c. {solcal_lph|3-} (22.7–6.8)，3. {solcal_lph|4-} (7.8–6.11)，4a. {solcal_lph|5-} (7.11–21.11)，4b. {solcal_lph|6-} (22.11–19.1)，4c. {solcal_lph|7-} (20.1–3.2)。简写：Φx·y，其中 x = 光之时，y =[SP]% 进度。– 这些日期基于天文节点，因此可能与常规日历略有出入。[~LF][~LF]“月日”与我们的日期类似，只是以“夜”代替“日”：Μx·y (p/z)，其中 x = 该年的“月月”，y = 该月中的第几夜。由于各个朔望月长短不同，z 表示该月的夜数总和，p 表示满月之夜。夜晚在日出时结束。[DF][DF][DF]",
     "buttonsolcal": "光照日历",
     "txlegende": "[DF]☉ 太阳，● 月亮（含月相）[~LF][~LF]♀ 金星（珠光色），♂ 火星（微红），♃ 木星（带状纹），♄ 土星（有光环），☿ 水星（灰色）[~LF][~LF][s] 天狼星，[k] 老人星 (Canopus)，[f] 半人马座α星，[a] 大角星 (Arcturus)，[w] 织女星 (Vega)，[c] 五车二 (Capella)，[r] 参宿七 (Rigel)，[p] 南河三 (Procyon)，[b] 参宿四 (Betelgeuse)，[h] 波江座α星 (Achernar)[DF][DF][DF][DF]",
     "char_vowels": "",
