--- a/lang/zh.json
+++ b/lang/zh.json
@@ -1,7 +1,7 @@
 {
     "_meta": {
-        "version": "1.7.2",
-        "updated": "2025-12-28 21:51:22"
+        "version": "1.7.3",
+        "updated": "2025-12-31 17:01:54"
     },
     "txwelcome": "欢迎",
     "quotes": [
@@ -62,8 +62,8 @@
     ],
     "tx_acc": [
         "% 位置",
-        "% 时间",
-        "% 显示",
+        "% 时钟",
+        "% 外观",
         "% 模式"
     ],
     "txgps_label": "GPS（纬度、经度）或地点名称",
@@ -134,7 +134,7 @@
     "txpartsupport": "[i]注意：(β) 此语言仅提供部分支持。因此，部分内容为英文。欢迎提供支持（Github）。- 在最后一页，您会看到一个“自动翻译”按钮[/i]",
     "txnosupport": "[i]注意：您的语言尚未翻译。在最后一页，您会看到一个“自动翻译”按钮[/i]",
     "uebanleitung": "说明",
-    "txanleitung": "[DF]{LANGSUPPORT}1. 勾选 {txgpsauto}，以便在使用期间自动更新您的位置（{quotes|0-}{tx_acc|3-}/{txagnihotra-}{quotes|1-} 用于更精确的定位与 GPS 时间同步）。{txgpsbutton} 会单次确定您当前的位置并固定采用。[~LF][~LF]或者，您也可以在文本框中输入地名或地址（如果您的设备支持），或输入坐标（例如 50.94, 6.96）。第 3 和第 4 项为可选：大致海拔 [m]、黄昏时的大致温度 [°C]。随后勾选 {txwelcomescr}。- 当基本数据发生变化时，{txsunclock-} 会进行一次日计算；根据设备不同，可能需要 2[NDASH]30 秒。[~LF][~LF]2. 通过 {txuhrsinn} 设置时钟是顺时针运行（南）还是逆时针运行。若更改旋转方向，位于地平线以下的太阳圆部分会呈现在您面前（详情见下一页）。{txshowclock} 会在表盘右上角显示数字时钟。",
+    "txanleitung": "[DF]{LANGSUPPORT}1. 勾选 {txgpsauto}，以便在使用过程中自动更新您的位置（{quotes|0-}{tx_acc|3-}/{txagnihotra-}{quotes|1-} 用于更精确的定位与 GPS 时间同步）。{txgpsbutton} 会一次性确定您当前的位置并将其保存。[~LF][~LF]或者，您也可以在文本框中输入地名或地址（若您的设备支持），或输入坐标（例如 50.94, 6.96）。第 3 与第 4 项为可选：大致海拔 [m]、黄昏时的大致温度 [°C]。随后勾选 {txwelcomescr}。- 当基本数据发生变化时，{txsunclock-} 会执行一次日计算，耗时视设备而定，可能在 2[NDASH]30 秒之间。[~LF][~LF]2. {txuhrsinn} 用于设置时钟是顺时针（南）还是逆时针运行：不过如果您更改旋转方向，太阳圆圈中位于地平线下方的部分将会在您面前（详情见下一页）。{txshowclock} 会在表盘右上角显示一个数字时钟。",
     "txmore": "[DF]3. {txfarben} 选择不同的表盘。{txnachtmodus} {txlangarr|auto-} 在日落时切换：-6° 到暮光结束，+6° 之前。 [~LF][~LF]4. {txagnihotra} 显示太阳指针的标记，以及下一次太阳过零时刻和倒计时。Agnihotra 开始前 6 分钟会放大显示并显示秒（⁺ 表示 GPS 为最新）。{txfullscr} 防止屏幕熄灭并切换到全屏。 - 如果某次设置未生效，请点击表盘右下角的刷新按钮。[~LF][~LF]你可以用两指缩放表盘（或三击）。如需拖动放大的画面，请慢慢移动；快速滑动会切到下一页。 - 下一页有表盘说明。[DF][DF][DF][b]–– 表盘图例：[/b]",
     "txdata": "[DF]数据",
     "txlocdata": "[DF]根据Gordon-太阳时钟对您所在位置的计算结果应与天文年历上的数据一致，误差不超过 0.0005 角秒³：[DF]",
@@ -152,8 +152,8 @@
     "graph_separateafter": [],
     "txmanual": "[DF]表盘",
     "txanleitung2": "[DF]“Gordon-太阳时钟”基本上是一款单指针手表，其表盘每天都会根据自然和天体的节奏发生变化。它显示太阳的位置和星空。这是一种全新的时间显示方式，不像我们传统的时钟（采用铁路时间和夏令时）那样人为，而是随着季节的变化而变化。[~LF][~LF][i]注意：您可以在本说明和表盘之间来回滑动。[/i][~LF][~LF][~LF][b]–– 您的视线：[/b][~LF][~LF]在屏幕中央，您会看到一条水平线。这是地平线（地球表面）。中间的尖三角是您从远处看到的云杉树（或教堂）。您不是从上方俯视它，而是站在它前面。[~LF][~LF]如果您没有更改设置（“视线方向：自动”），那么在北半球，您通常会看到南方（在南半球，您会看到北方）。屏幕左侧的物体位于东方，右侧的物体位于西方（在南半球则相反）。地平线边缘标有各个方位。[~LF][~LF]地平线下的明亮条带表示民用黄昏。大块的深灰色区域代表夜晚（包括航海黄昏）。位于该区域内的物体不可见。[~LF][~LF]左下角显示当地时间，右上角显示太阳在天空中的高度（例如 27.6°），以及您的位置数字代码（例如“cri-hs”）或地点名称（如果您输入了）。下方显示不均匀的时间小时显示。",
-    "txanleitung2b": "[DF][DF][b]–– 太阳：[/b][~LF][~LF]太阳（位于时钟唯一指针的末端）在一天中从左向右移动（南半球相反）。太阳在屏幕上越靠左，就越靠近东方；越靠右，就越靠近西方（南半球相反）。太阳在屏幕上越高，它在天空中的位置就越高。[~LF][~LF]太阳沿着绘制的圆轨道运行，一天之内完成一周的运行。圆轨道的边缘标有小时（例如“12”点），因此圆轨道也起着时钟表盘的作用。[~LF][~LF] 从表盘上可以看出，在时间转换期间，数字会发生变化，但圆轨道保持不变。或者：由于 12 点并不完全位于表盘顶部，因此大多数地方的法定时间与当地时间存在差异。时间小时则不同：在第 12 小时（12ἡ）结束时，总是日落。[~LF][~LF][~LF][b]–– 月球：[/b][~LF][~LF]月球也有一个轨道。它被画成一个浅灰色的圆圈（没有指针）。由于月球需要 24 小时以上才能完成一次公转，因此额外添加了两个小时（来自昨天），用特别浅的灰色表示。如果“随表而活”，就可以清楚地看到月亮在数周内周期性地升高和降低。此外，还可以观察到满月时月亮与太阳在圆周位置相对（远离）；而新月时月亮与太阳在圆周位置相同（靠近太阳）。由于是从侧面观察（而不是从上方），因此通常位置并不完全相同。只有日食时，它们才会处于完全相同的位置。[~LF][~LF]满月和新月由阴影标记。新月显示 35 个小时（因为这是完全看不到月亮的时间）。满月显示 24 个小时。太阳和月亮轨道的重新计算在协调世界时 00:00 进行。",
-    "txanleitung2c": "[DF][DF][b]–– 行星：[/b][~LF][~LF]显示肉眼可见的五颗行星，配有通过双筒望远镜看到的图片，或（根据设计）通过其天文符号表示，参见第 2 页）。当您观察真正的星空时，您可以通过以下知识来区分行星和恒星：行星不会闪烁，而是持续发光。它们在天空中的尺寸明显大于遥远的恒星，因此不会受到大气密度变化的影响。[~LF][~LF][~LF][b]–– 星星：[/b][~LF][~LF]此外，还显示了十颗最亮的星星，用方框中的字母表示（图例见第 2 页）。行星相对有序，大多位于太阳轨道附近，而恒星的轨道与太阳无关——它们本身就是自己的太阳。恒星符号的两个边总是比另外两个边更粗。这表示它们目前所在轨道的角或象限。如果右下角突出，则该恒星（或多或少）位于其轨道向下和向右的“末端”。它将主要向上和向左移动（通常也会移出屏幕）。如果上方更突出，则该恒星位于您面前；如果下方更突出，则该恒星位于您身后（如果您未更改旋转方向）。",
+    "txanleitung2b": "[DF][DF][b]–– 太阳：[/b][~LF][~LF]太阳（在时钟唯一指针的末端）在一天中从左向右移动（南半球相反）。太阳在屏幕上越靠左，就越偏东；越靠右，就越偏西（南半球相反）。太阳在屏幕上显示得越高，就表示它在天空中的高度越高。[~LF][~LF]太阳沿着绘制的圆形轨迹运行，表示它在一天内的运动路径。圆轨迹的边缘标有小时（例如 „12“），因此这条圆轨迹也充当表盘。[~LF][~LF]例如，您可以在表盘上看到：在夏令时切换期间数字如何移动，而圆轨迹本身保持不变。或者：在大多数地点，法定时间如何偏离当地时间，因为 12 点并不正好位于表盘顶部。时辰（temporal hours）则不同：在第 12 时（12ἡ）总是日落。[~LF][~LF][~LF][b]–– 月亮：[/b][~LF][~LF]月亮也有一条圆形轨迹，以浅灰色绘制。由于月亮完成一圈需要超过 24 小时，因此会用更浅的灰色额外附加前一天的 1.5 小时。若您“与这只钟一起生活”，就能清楚看到月亮在 27.3 天内如何越升越高、又逐渐降低。此外，您还能观察到：在满月时，它在圆圈上与太阳处于相对位置（远离太阳）；而在新月时，它处于同一圆圈位置（靠近太阳）。通常并非完全相同的位置，因为视角是侧向的（不是从上往下）。只有在日食时才会完全重合。[~LF][~LF]满月与新月会用阴影标记。新月会显示 35 小时（因为这段时间月亮无论如何都看不见）。满月会显示 24 小时。太阳与月亮轨迹的重新计算每天在 UTC 00:00 进行。",
+    "txanleitung2c": "[DF][DF][b]–– 行星：[/b][~LF][~LF]会显示五颗肉眼可见的行星，并配有照片（就像用双筒望远镜看到的那样），或者（取决于设计）以它们的天文符号表示（见上一页）。当您观察真实的夜空时，可以通过“行星不会闪烁，而是稳定发光”来区分行星与恒星。行星在天空中看起来比遥远的恒星明显更大，因此受大气密度波动的影响也更小。[~LF][~LF][~LF][b]–– 恒星：[/b][~LF][~LF]另外还会显示十颗最亮的恒星，用“方框中的字母”表示（图例见上一页）。行星相对更有规律，通常或多或少位于太阳轨迹附近；而恒星的轨迹与太阳无关——它们本身就是自己的太阳。恒星符号中，方框的两条边会比另外两条画得更粗，这表示它们当前所在轨迹的角落或象限。如果突出显示的角在右下方，恒星（或多或少）位于其轨迹“末端”的右下方向。随后它的运动将主要朝左上方移动（也常常会移出屏幕）。如果上边更粗，恒星在您面前；如果下边更粗，则在您身后（前提是您没有更改旋转方向）。",
     "txanleitung2d": "[DF][DF][b]–– 历史：[/b][~LF][~LF]2019 年，我为树莓派开发了配备 10 英寸电子纸显示屏的Gordon-太阳时钟，因为我想拥有一款外观美观且能将时间与太阳运行相结合的挂钟。我的目标是制造一款显示自然时间（而不是 12 小时模拟时钟所显示的人造时间）的时钟。在我们居住的地方，一年中的白天长度存在明显差异，而且还有反复出现且不受欢迎的时间调整。太阳时钟应该把这一切都表现出来：它有一个有机表盘，根据季节和自然节奏变化。现在，几乎每个人口袋里都有一个小电脑，所以我把 2025 太阳时钟做成了安卓应用。希望它能给你带来快乐和新发现！[DF][DF][DF]",
     "txabout": "[DF]信息",
     "txanleitungprg": "[DF]Gordon-太阳时钟[~LF]版本 [VERSIONNUM][~LF]Gordon Axmann[~LF]版权 2019-[VERSIONYEAR]",
